--- a/example/index.html
+++ b/example/index.html
@@ -18,7 +18,7 @@
 <body onload="start()">
 
     <h1 class="text-lg">Hacker News</h1>
-    <ul id="articles" class="list-disc list-inside"></ul>
+    <div id="articles"></div>
 
 </body>
 </html>
